2007-08-24  Michael Natterer  <mitch@gimp.org>

	* configure.in: applied patch from Tim Mooney which fixes
	configure output if libexif is not found. Fixes bug #469708.

2007-08-23  Øyvind Kolås  <pippin@gimp.org>

	* app/display/gimpdisplayshell-render.c: added a static global
	variable with configuration.
	(compute_sample): moved common computation of alpha*weight factors 
	for channel out of loop.

2007-08-23  Øyvind Kolås  <pippin@gimp.org>

	* app/display/gimpdisplayshell-render.c: (compute_sample),
	(render_image_tile_fault), (render_image_tile_fault_one_row):
	refactored to use arrays of tiles/source pixels instead of individual
	variables, also modified the order of the 0..8 numbers to sorted
	in increasing row-major order.

2007-08-22  Øyvind Kolås  <pippin@gimp.org>

	* app/display/gimpdisplayshell-render.c: replaced bilinear
	interpolation from next larger pyramid level with a boxfilter
	of the next larger pyramid level.

	This is probably the last update to the quality of the display
	in GIMP 2.4.

2007-08-21  Martin Nordholts  <martinn@svn.gnome.org>

	* app/tools/gimprectangletool.c
	(gimp_rectangle_tool_update_with_coord): Don't adjust the
	rectangle shape if it is is merely being moved.

2007-08-20  Michael Natterer  <mitch@gimp.org>

	* menus/Makefile.am: s/MAINTAINERCLEAN_FILES/MAINTAINERCLEANFILES/
	Fixes bug #468336.

2007-08-18  Michael Natterer  <mitch@gimp.org>
	    Simon Budig  <simon@gimp.org>
	    Øyvind Kolås  <pippin@gimp.org>
	    Roman Joost  <romanofski@gimp.org>

	* app/sven.c: changed license from free to bus2342. Congratulations!

2007-08-18  Michael Natterer  <mitch@gimp.org>

	* app/actions/view-actions.c (view_actions_update): use _()
	instead of N_() when setting the label of "Revert Zoom"
	directly. Fixes bug #467933.

2007-08-18  Martin Nordholts  <martinn@svn.gnome.org>

	* app/tools/gimprectangletool.c: Don't make
	GIMP_RECTANGLE_CONSTRAIN_NONE into GIMP_RECTANGLE_CONSTRAIN_IMAGE,